# vectora_ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/linear_regression/: loss_curve.py
tests/: test_ada_boost.py  test_datasets.py  test_decision_tree.py  test_decision_tree_regressor.py  test_estimator.py  test_exceptions.py  test_gradient_boosting.py  test_knn.py  test_lasso.py  test_linear_regression.py  test_logistic_regression.py  test_metrics.py  test_pca.py  test_preprocessing.py  test_random_forest.py  test_ridge.py  test_split.py  test_svm.py  test_validation.py  test_visualization.py
vectora_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vectora_ml/core/: __init__.py  estimator.py  exceptions.py  metrics.py  validation.py
vectora_ml/decomposition/: __init__.py  pca.py
vectora_ml/ensemble/: __init__.py  ada_boost.py  gradient_boosting.py  random_forest.py
vectora_ml/linear_model/: __init__.py  lasso.py  linear_regression.py  logistic_regression.py  ridge.py
vectora_ml/neighbors/: __init__.py  knn.py
vectora_ml/svm/: __init__.py  svm.py
vectora_ml/tree/: __init__.py  decision_tree.py  decision_tree_regressor.py  node.py
vectora_ml/utils/: __init__.py  datasets.py  preprocessing.py  validation.py
vectora_ml/viz/: __init__.py  plotting.py
