[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vectora-ml"
version = "0.1.0"
description = "Machine Learning library implemented from scratch."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sankar" }
]
dependencies = [
    "numpy",
    "matplotlib"
]

[tool.setuptools.packages.find]
include = ["vectora_ml*"]